objects/Case_Metric__c.object
<CustomObject>
    <description>Case Metric</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Metrics</relationshipLabel>
        <relationshipName>Case_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duration_In_Hours__c</fullName>
        <formula>(End_Date__c - Start_Date__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (In Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF(Duration_In_Hours__c &gt; 0, 
Text(FLOOR(Duration_In_Hours__c/ 24)) &amp; &apos; Days &apos; &amp; 
Text( 
FLOOR( 
(Duration_In_Hours__c- (FLOOR(Duration_In_Hours__c /24) *24)) 
) 
) &amp; &apos; Hours &apos; &amp; 
Text( 
FLOOR( 
(Duration_In_Hours__c- FLOOR(Duration_In_Hours__c)) * 60 
) 
) &amp; &apos; Min&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_With_Support_Display__c</fullName>
        <formula>IF(Time_With_Support__c &gt; 0, 
Text(FLOOR(Time_With_Support__c/ 12)) &amp; &apos; Days &apos; &amp; 
Text( 
FLOOR( 
(Time_With_Support__c- (FLOOR(Time_With_Support__c /12) *12)) 
) 
) &amp; &apos; Hours &apos; &amp; 
Text( 

FLOOR( 
(Time_With_Support__c- FLOOR(Time_With_Support__c)) * 60 
) 
) &amp; &apos; Min&apos;, &apos;0 Days&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time With Support Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Case Metric</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Case Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>